WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173962
REGRESSION(
r216944
): Font loads can cause Chinese characters to draw as .notdef
https://bugs.webkit.org/show_bug.cgi?id=173962
Summary
REGRESSION(r216944): Font loads can cause Chinese characters to draw as .notdef
Myles C. Maxfield
Reported
2017-06-28 22:32:24 PDT
Font loads can cause Chinese characters to draw as .notdef
Attachments
Patch
(4.18 KB, patch)
2017-06-28 22:36 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews122 for ios-simulator-wk2
(1016.22 KB, application/zip)
2017-06-29 00:02 PDT
,
Build Bot
no flags
Details
Patch
(17.34 KB, patch)
2017-07-02 02:12 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-elcapitan-wk2
(1.35 MB, application/zip)
2017-07-02 13:57 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews121 for ios-simulator-wk2
(1.52 MB, application/zip)
2017-07-03 13:20 PDT
,
Build Bot
no flags
Details
Patch
(17.18 KB, patch)
2017-07-05 21:51 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews126 for ios-simulator-wk2
(1.19 MB, application/zip)
2017-07-05 23:20 PDT
,
Build Bot
no flags
Details
Patch
(19.83 KB, patch)
2017-07-06 09:56 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(15.24 KB, patch)
2017-07-06 14:14 PDT
,
Myles C. Maxfield
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(8)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2017-06-28 22:36:39 PDT
Created
attachment 314116
[details]
Patch
Myles C. Maxfield
Comment 2
2017-06-28 22:39:28 PDT
<
rdar://problem/32925318
>
Myles C. Maxfield
Comment 3
2017-06-28 22:41:38 PDT
Comment on
attachment 314116
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=314116&action=review
> Source/WebCore/ChangeLog:3 > + Font loads can cause Chinese characters to draw as .notdef
REGRESSION(
r216944
):
> LayoutTests/ChangeLog:3 > + Font loads can cause Chinese characters to draw as .notdef
REGRESSION(
r216944
):
Build Bot
Comment 4
2017-06-29 00:02:49 PDT
Comment on
attachment 314116
[details]
Patch
Attachment 314116
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/4018382
New failing tests: fast/text/font-load-fallback-chinese.html
Build Bot
Comment 5
2017-06-29 00:02:50 PDT
Created
attachment 314120
[details]
Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
Myles C. Maxfield
Comment 6
2017-07-02 02:12:34 PDT
Created
attachment 314412
[details]
Patch
Build Bot
Comment 7
2017-07-02 13:57:04 PDT
Comment on
attachment 314412
[details]
Patch
Attachment 314412
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/4039266
New failing tests: workers/bomb.html
Build Bot
Comment 8
2017-07-02 13:57:05 PDT
Created
attachment 314426
[details]
Archive of layout-test-results from ews105 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Myles C. Maxfield
Comment 9
2017-07-02 15:21:24 PDT
Failure is unrelated.
Build Bot
Comment 10
2017-07-03 13:20:11 PDT
Comment on
attachment 314412
[details]
Patch
Attachment 314412
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/4046281
New failing tests: fast/text/font-loading-system-fallback.html fast/text/font-loading-system-fallback-visibility.html
Build Bot
Comment 11
2017-07-03 13:20:12 PDT
Created
attachment 314511
[details]
Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
Myles C. Maxfield
Comment 12
2017-07-05 21:51:55 PDT
Created
attachment 314695
[details]
Patch
Build Bot
Comment 13
2017-07-05 23:20:50 PDT
Comment on
attachment 314695
[details]
Patch
Attachment 314695
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/4061000
New failing tests: fast/text/font-loading-system-fallback.html
Build Bot
Comment 14
2017-07-05 23:20:52 PDT
Created
attachment 314699
[details]
Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
Myles C. Maxfield
Comment 15
2017-07-06 09:56:58 PDT
Created
attachment 314728
[details]
Patch
Myles C. Maxfield
Comment 16
2017-07-06 14:14:59 PDT
Created
attachment 314756
[details]
Patch
Simon Fraser (smfr)
Comment 17
2017-07-06 14:27:20 PDT
Comment on
attachment 314756
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=314756&action=review
> Source/WebCore/platform/graphics/Font.cpp:289 > + if (!m_derivedFontData) > + m_derivedFontData = std::make_unique<DerivedFonts>();
This is repeated 3 times. Maybe make an ensureDerivedFontData() function?
> Source/WebCore/platform/graphics/Font.h:137 > + const Font& invisibleFont() const;
This is a little mysterious. Is this the font you use if you don't want the characters to display?
> Source/WebCore/platform/graphics/Font.h:284 > + RefPtr<Font> invisible;
I would have said "Font" after the name. "invisibleFont". Same for the preceding.
> Source/WebCore/platform/graphics/FontCascadeFonts.cpp:333 > +
remove this blank line.
Myles C. Maxfield
Comment 18
2017-07-06 14:59:59 PDT
Comment on
attachment 314756
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=314756&action=review
>> Source/WebCore/platform/graphics/Font.h:137 >> + const Font& invisibleFont() const; > > This is a little mysterious. Is this the font you use if you don't want the characters to display?
Yep! For loading purposes.
Myles C. Maxfield
Comment 19
2017-07-06 15:09:16 PDT
Committed
r219221
: <
http://trac.webkit.org/changeset/219221
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug